# polystore

./: README.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: ci.yml  coverage-pages.yml  smoke-test.yml  tests.yml
docs/source/: index.rst  installation.rst  quickstart.rst
docs/source/api/: atomic.rst  backends.rst  exceptions.rst  filemanager.rst  index.rst  registry.rst
docs/source/guides/: custom_backends.rst
src/polystore/: __init__.py  atomic.py  backend_registry.py  base.py.bak  config.py  constants.py  disk.py  exceptions.py  filemanager.py  formats.py  lazy_imports.py  memory.py  registry.py  streaming.py  utils.py  zarr.py
tests/: conftest.py  test_backend_registry.py  test_basic.py  test_disk_backend.py  test_disk_more.py  test_filemanager_backends.py  test_filemanager_extended.py  test_memory_backend.py  test_memory_coverage.py  test_zarr_backend.py
