[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polystore"
dynamic = ["version"]
description = "Framework-agnostic multi-backend storage abstraction for ML and scientific computing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    {name = "Tristan Simas", email = "tristan.simas@mail.mcgill.ca"}
]
keywords = [
    "storage",
    "backend",
    "multi-framework",
    "numpy",
    "pytorch",
    "jax",
    "tensorflow",
    "zarr",
    "io",
    "data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.26.0",
    "portalocker>=2.8.0",  # Cross-platform file locking
    "metaclass-registry @ git+https://github.com/trissim/metaclass-registry.git@main",
]

[project.optional-dependencies]
zarr = [
    "zarr>=2.18.0,<3.0",
    "ome-zarr>=0.11.0",
]

torch = [
    "torch>=2.0.0",
]

jax = [
    "jax>=0.4.0",
]

tensorflow = [
    "tensorflow>=2.12.0",
]

cupy = [
    "cupy>=12.0.0",
]

streaming = [
    "pyzmq>=25.0.0",
]

all = [
    "zarr>=2.18.0,<3.0",
    "ome-zarr>=0.11.0",
    "torch>=2.0.0",
    "jax>=0.4.0",
    "tensorflow>=2.12.0",
    "cupy>=12.0.0",
    "pyzmq>=25.0.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.2",
    "genbadge[coverage]",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-toolbox>=3.0.0",
    "sphinx-design>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/trissim/polystore"
Documentation = "https://polystore.readthedocs.io"
"Bug Reports" = "https://github.com/trissim/polystore/issues"
Source = "https://github.com/trissim/polystore"

[tool.setuptools.packages.find]
where = ["src"]
include = ["polystore*"]

[tool.setuptools.dynamic]
version = {attr = "polystore.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=polystore",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["polystore"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

